feat: refactor for jpms support
- feat: introduce module configurations for most packages
- chore: refactor split-package modules (breaking)
- chore: update all use-sites for `Polyglot` etc
- chore: remove stray pnpm lock in `tools/scripts`

Caution: This commit was restored and needs to be reviewed with
care before merging.

Signed-off-by: Sam Gammon <sam@elide.ventures>